--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </style>
   </head>
   <body>
-    <h1>🧠 我的 AI 小助手</h1>
+    <h1>🧠 AI 小助手</h1>
     <button onclick="toggleTheme()">🌗 切換主題</button>
     <div id="robot-area">
       <img src="your-avatar.png" alt="我的小人" id="avatar" />
@@ -128,21 +128,25 @@
 
       const dialogs = [
         '嗨，我是アッカーマン！',
-        '我來幫你認識他：他是一個比較慢熟的人，剛開始可能比較安靜，但熟了之後會發現他很有自己的想法，也很貼心。',
+        '我來幫你認識他：紘綦是一個比較慢熟的人，剛開始可能比較安靜，但熟了之後會發現他很有自己的想法，也很貼心',
+        '他最近很迷楓之谷，可以邀請他一起遊戲',
+        '還有還有',
+        '他也很喜歡看小說或心理學相關書籍，偶爾會在空堂前往圖書館看書',
+        '最近他的導師出了個期末專題',
         '這是他製作的互動式簡歷網頁！',
       ];
 
       const topics = {
         interest:
-          '平時我喜歡玩Valorant，享受與隊友之間的合作與戰術溝通。此外，我也喜歡看恐怖電影，偶爾會去參加音樂祭，享受聽團的樂趣。(例如:草東沒有派對、怕胖團)',
+          '平時喜歡玩Valorant，享受與隊友之間的合作與戰術溝通。此外，也喜歡看恐怖電影，偶爾會去參加音樂祭，享受聽團的樂趣。(例如:草東沒有派對、怕胖團)',
         skill:
           '我的專長是 C 與 Python 的應用程式設計，擅長圖形介面與互動設計。',
         experience:
           '曾參與校內程式競賽，也在系學會擔任總務長，熟悉規劃與紀錄。',
         education: '目前就讀於淡江大學資訊工程學系，曾就讀海山高中及南門國中',
-        projects: '近期作品包含節奏音樂遊戲與日式將棋系統，皆具備互動 GUI。',
+        projects: '近期作品包含節奏音樂遊戲與日式將棋系統。',
         goal: '短期目標是成為熟練的前後端工程師，未來希望投入智慧應用或遊戲產業。',
-        character: '我是個細心且願意傾聽的人，喜歡解決問題並重視團隊溝通。',
+        character: '細心且願意傾聽的人，喜歡解決問題並重視團隊溝通。',
         tech: '學習過C、HTML、C++，也會溜冰、游泳、打羽球等球類運動',
       };
 
